--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <!-- Suara -->
-  <audio id="merge-sound" src="https://freesound.org/data/previews/511/511919_1667046-lq.mp3" preload="auto"></audio>
+  <audio id="merge-sound" src="musik.mp3" preload="auto"></audio>
   <audio id="move-sound" src="https://freesound.org/data/previews/612/612092_1648170-lq.mp3" preload="auto"></audio>
   <audio id="over-sound" src="https://freesound.org/data/previews/385/385050_5121236-lq.mp3" preload="auto"></audio>
 
