--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <audio id="merge-sound" src="musik.mp3" preload="auto"></audio>
   <audio id="move-sound" src="https://freesound.org/data/previews/612/612092_1648170-lq.mp3" preload="auto"></audio>
   <audio id="over-sound" src="https://freesound.org/data/previews/385/385050_5121236-lq.mp3" preload="auto"></audio>
-
+<button id="merge-sound">play</button>
   <!-- Tampilan -->
   <div class="header">
     <h1>2048</h1>
