--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
   <audio id="merge-sound" src="musik.mp3" preload="auto"></audio>
   <audio id="move-sound" src="https://freesound.org/data/previews/612/612092_1648170-lq.mp3" preload="auto"></audio>
   <audio id="over-sound" src="https://freesound.org/data/previews/385/385050_5121236-lq.mp3" preload="auto"></audio>
-<button id="merge-sound">play</button>
+
   <!-- Tampilan -->
   <div class="header">
     <h1>2048</h1>
     <div>
+      <div clasd="merge-sound"><div>play</div><div id="merge-sound"</div></div>
       <div class="score-box"><div>SCORE</div><div id="score">0</div></div>
       <div class="score-box"><div>BEST</div><div id="best">0</div></div>
     </div>
