--- a/tertis.html
+++ b/tertis.html
@@ -34,7 +34,9 @@
       border-radius: 10px;
     }
   </style>
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="manifest.json" >
+  <link rel="icon" href="icon2048-192x192.png" sizes="192x192">
+  
 <meta name="theme-color" content="#bbada0">
 <script>
   if ('serviceWorker' in navigator) {
