--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 <body>
   <h1>Pilih Mode Permainan</h1>
+  <!-- Tambahkan di dalam <body> -->
+<div style="margin-top: 20px;">
+  <a href="index.html" style="background: #bbada0;">Kembali ke Menu</a>
+</div>
   <a href="classic.html">🎮 Mode Klasik 2048</a>
   <a href="tetris.html">🧱 Mode Tetris 2048</a>
 </body>
