--- a/classic.html
+++ b/classic.html
@@ -231,5 +231,9 @@
 
     window.addEventListener('load', () => setTimeout(initGame, 100));
   </script>
+    <!-- Di bagian bawah sebelum </body> -->
+<div style="text-align: center; margin-top: 20px;">
+  <a href="index.html" style="padding: 10px 20px; background: #bbada0; color: white; text-decoration: none; border-radius: 5px;">Kembali ke Menu</a>
+</div>
 </body>
 </html>
