--- a/tertis.html
+++ b/tertis.html
@@ -340,5 +340,9 @@
     // Mulai game
     mulaiPermainan();
   </script>
+  <!-- Di bagian bawah sebelum </body> -->
+<div style="text-align: center; margin: 20px 0;">
+  <a href="index.html" style="padding: 10px 20px; background: #bbada0; color: white; text-decoration: none; border-radius: 5px;">Kembali ke Menu</a>
+</div>
 </body>
 </html>
