--- a/classic.html
+++ b/classic.html
@@ -10,6 +10,11 @@
   <style>
     /* Gaya game tetap sama seperti sebelumnya */
     body {
+      .gambar-full {
+  width: 100%;
+  height: auto;
+  display: block;
+      }
       margin: 0;
       font-family: Arial, sans-serif;
       background: #faf8ef;
@@ -17,7 +22,7 @@
       flex-direction: column;
       align-items: center;
       padding: 20px;
-      height: 100vh;
+      height: auto;
       overflow: hidden;
     }
     .header, .controls, .grid-container, .game-over { width: 100%; max-width: 500px; }
