--- a/classic.html
+++ b/classic.html
@@ -8,13 +8,13 @@
   <link rel="manifest" href="manifest.json">
   <link rel="icon" href="icon2048-192x192.png" sizes="192x192">
   <style>
+    .gambar-full {
+      width: 100%;
+      height: auto;
+      display:  blok;
     /* Gaya game tetap sama seperti sebelumnya */
     body {
-      .gambar-full {
-  width: 100%;
-  height: auto;
-  display: block;
-      }
+      <img src="namagambar.jpg" alt="Gambar" class="gambar-layar-penuh">
       margin: 0;
       font-family: Arial, sans-serif;
       background: #faf8ef;
