--- a/classic.html
+++ b/classic.html
@@ -14,7 +14,7 @@
       display:  blok;
     /* Gaya game tetap sama seperti sebelumnya */
     body {
-      <img src="namagambar.jpg" alt="Gambar" class="gambar-layar-penuh">
+      <img src="2048_gambar.jpg" alt="Gambar" class="gambar-layar-penuh">
       margin: 0;
       font-family: Arial, sans-serif;
       background: #faf8ef;
