--- a/classic.html
+++ b/classic.html
@@ -14,6 +14,20 @@
     /* Gaya game tetap sama seperti sebelumnya */
     body {
       <img src="2048_gambar.png" alt="Gambar" class="gambar-layar-penuh">
+      body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.game {
+  width: 100vw;
+  height: 100vh;
+  background-image: url('2048_gambar.png');
+  background-size: cover;
+  background-position: center;
+}
+      
       margin: 0;
       font-family: Arial, sans-serif;
       background: #faf8ef;
