--- a/classic.html
+++ b/classic.html
@@ -13,7 +13,7 @@
       display:  blok;
     /* Gaya game tetap sama seperti sebelumnya */
     body {
-      <img src="2048_gambar.png" alt="Gambar" class="gambar-layar-penuh">
+      <img src="2048_gambar.jpg" alt="Gambar" class="gambar-layar-penuh">
       body, html {
   margin: 0;
   padding: 0;
