--- a/classic.html
+++ b/classic.html
@@ -77,8 +77,9 @@
       position: relative; 
       aspect-ratio: 1/1; 
       touch-action: none;
-      width: 100%;
+      width: (100% - 30px);
       flex-grow: 1;
+      margin: 0 auto;
     }
     
     .grid { 
@@ -103,6 +104,7 @@
       border-radius: 5px; 
       transition: all 0.1s ease; 
       color: #776e65;
+      box-sizing: border-box;
     }
     
     /* Tile colors */
