--- a/classic.html
+++ b/classic.html
@@ -77,9 +77,10 @@
       position: relative; 
       aspect-ratio: 1/1; 
       touch-action: none;
-      width: (100% - 30px);
+      width: 100%;
       flex-grow: 1;
       margin: 0 auto;
+      overflow :hidden;
     }
     
     .grid { 
