--- a/classic.html
+++ b/classic.html
@@ -77,7 +77,7 @@
       position: relative; 
       aspect-ratio: 1/1; 
       touch-action: none;
-      width: 100%;
+      width: (100% - 15px);
       flex-grow: 1;
       margin: 0 auto;
       overflow :hidden;
