--- a/classic.html
+++ b/classic.html
@@ -22,7 +22,7 @@
       flex-direction: column;
       height: 100vh;
       width: 100vw;
-      padding: 10px;
+      padding: 0;
       box-sizing: border-box;
       max-width: 500px;
       margin: 0 auto;
