--- a/classic.html
+++ b/classic.html
@@ -76,7 +76,7 @@
     position: relative; 
     aspect-ratio: 1/1; 
     touch-action: none;
-    width: 100%
+    width: 400px;
     margin: 0 auto; /* Pusatkan grid */
     flex-grow: 1;
     overflow: hidden; /* Mencegah tile keluar dari container */
