--- a/classic.html
+++ b/classic.html
@@ -70,6 +70,9 @@
       cursor: pointer;
     }
       .grid-container { 
+        display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
     background: #bbada0; 
     border-radius: 6px; 
     padding: 0; 
