--- a/classic.html
+++ b/classic.html
@@ -185,6 +185,8 @@
     
     <div class="grid-container" id="grid-container">
       <div class="grid" id="grid"></div>
+      <div class="tile">2</div>
+    <div class="tile">4</div>
     </div>
   </div>
   
