--- a/classic.html
+++ b/classic.html
@@ -21,7 +21,7 @@
       display: flex;
       flex-direction: column;
       height: 100vh;
-      width: 100vw;
+      width: 100%;
       padding: 0;
       box-sizing: border-box;
       max-width: 500px;
