--- a/tetris.html
+++ b/tetris.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background: #faf8ef;
+      background: #ADD8E6;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -104,7 +104,7 @@
     const finalScoreElement = document.getElementById('final-score');
     
     // Pengaturan game
-    const cols = 4;
+    const cols = 6;
     const rows = 8;
     const size = 50;
     let papan = Array(rows).fill().map(() => Array(cols).fill(0));
