--- a/classic.html
+++ b/classic.html
@@ -192,6 +192,7 @@
   <div class="game-over" id="game-over">
     <h2 id="game-over-text">Game Over!</h2>
     <button id="try-again-btn">Try Again</button>
+    <a href="index.html" style="padding: 10px 20px; background: #bbada0; color: white; text-decoration: none; border-radius: 5px;">Kembali ke Menu</a>
   </div>
   
   <script>
