--- a/classic.html
+++ b/classic.html
@@ -450,6 +450,7 @@
       setTimeout(initGame, 100);
     });
   </script>
+    <div style="text-align: center; margin: 20px 0;">
   <a href="index.html" style="padding: 10px 20px; background: #bbada0; color: white; text-decoration: none; border-radius: 5px;">Kembali ke Menu</a>
 </div>
 </body>
