--- a/tetris.html
+++ b/tetris.html
@@ -12,8 +12,8 @@
       flex-direction: column;
       align-items: center;
       margin: 0;
-      padding: 40px;
-      height: 100vh;
+      padding: 20px;
+      height: 100%;
       box-sizing: border-box;
     }
     h1 {
